# scmalaria_v3

./: appveyor.yml  main.py  pyproject.toml  requirements.txt
