[project]
name = "scmalaria"
version = "0.3.0"
description = "Single Cell Malaria Analysis v3"

authors = [{name = "Majeed", email = "mjbioinfo@gmail.com"}]
license = {text = "MIT"}


dependencies = [
    "flet==0.27.1",
]

[tool.flet]
product = "scMalaria"
org = "com.mjbioinfo"
copyright = "Copyright (C) 2026 MJBioInfo"

[tool.flet.macos]
bundle_id = "com.mjbioinfo.scmalaria"